--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
       </header>
 
       <div class="inputs">
-        <input id="inputText" type="text" name="name" value="Search Gifs Here!">
+        <input id="inputText" type="text" name="name" value="cats">
         <input id="subButton" type="button" value="Submit">
       </div>
 
       <div class="listContainer">
         <div class="gifList">
+          
         </div>
       </div>
 
@@ -28,6 +29,7 @@
         <h3>(c) MTCS Copyright 2016. All rights reserved.</h3>
       </footer>
     </div>
-
+      <script   src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+     <script src="app.js"></script>
   </body>
 </html>
